[gd_scene load_steps=7 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/tamagotchi.png" type="Texture" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/ARCADECLASSIC.TTF"

[sub_resource type="DynamicFont" id=2]
size = 37
font_data = SubResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="Theme" id=4]
/styles/aaa = SubResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Tamagotchi" type="Sprite" parent="."]
position = Vector2( 541, 292 )
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="MessageLabel" type="RichTextLabel" parent="."]
margin_left = 259.0
margin_top = 13.0
margin_right = 666.0
margin_bottom = 163.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/default_color = Color( 0.129412, 0.188235, 0.462745, 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false

[node name="ScoreLabel" type="RichTextLabel" parent="."]
margin_left = 880.0
margin_top = 5.0
margin_right = 980.0
margin_bottom = 105.0
rect_scale = Vector2( 2, 2 )
custom_colors/default_color = Color( 0.129412, 0.188235, 0.462745, 1 )
custom_fonts/normal_font = SubResource( 2 )

[node name="StartButton" type="Button" parent="."]
margin_left = 520.0
margin_top = 428.0
margin_right = 561.0
margin_bottom = 448.0
text = "Start"

[node name="PlayAgain" type="Button" parent="."]
margin_left = 503.0
margin_top = 427.0
margin_right = 580.0
margin_bottom = 447.0
theme = SubResource( 4 )
text = "Play Again"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="TamikesccottchiLabel" type="RichTextLabel" parent="."]
margin_left = 400.0
margin_top = 181.0
margin_right = 684.0
margin_bottom = 288.0
custom_fonts/normal_font = SubResource( 2 )
text = "Tamikescottchi"
fit_content_height = true
scroll_active = false

[node name="FinalScoreLabel" type="RichTextLabel" parent="."]
margin_left = 491.0
margin_top = 218.0
margin_right = 553.0
margin_bottom = 274.0
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 2 )
fit_content_height = true
scroll_active = false

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="PlayAgain" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
